landing layout final!!!

--- a/templates/workhub/index.ejs
+++ b/templates/workhub/index.ejs
@@ -12,35 +12,43 @@
   <header class="top-nav">
     <div class="nav-pill" id="navPill">
       <span class="nav-pill-active" id="navActive"></span>
-      <button class="nav-link is-active" data-link="about" type="button">About me</button>
-      <button class="nav-link" data-link="works" type="button">Works</button>
+      <button class="nav-link is-active" data-link="casestudies" type="button">Case Studies</button>
       <button class="nav-link" data-link="experiments" type="button">Experiments</button>
       <button class="nav-link" data-link="designsystem" type="button">Design System</button>
       <button class="nav-link" data-link="contact" type="button">Contact</button>
     </div>
   </header>
-  <section id="about" data-nav="about">
+
+  <div class="spacingMedium"></div>
+
+
+  <section id="casestudies" data-nav="casestudies">
     <div class="spacingXLarge"></div>
+        <div class="spacingMedium"></div>
+
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
           <div class="element">
-            <div class="chat-bubble-wrap">
-              <div class="chat-bubble">
-                <span class="typing">
-                  <span class="dot"></span>
-                  <span class="dot"></span>
-                  <span class="dot"></span>
-                </span>
-                <span class="bubble-text"></span>
+            <div class="rowWorkHub centerVer">
+              <div class="photoWrapperWorkhub">
+                <img class="landingProfileImg" src="photo_profile_avatar.png" alt="vicky">
+              </div>
+              <div class="chat-bubble-wrap">
+                <div class="workhub chat-bubble">
+                  <span class="typing">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                  </span>
+                  <span class="bubble-text"></span>
+                </div>
               </div>
             </div>
-            <div class="spacingXSmall"></div>
-            <div class="photoWrapperWorkhub">
-              <img class="landingProfileImg" src="photo_profile_avatar.png" alt="vicky">
-            </div>
+        <div class="spacingXSmall"></div>
 
-            <div class="spacingMedium"></div>
+
+
             <h1 class="newLandingTitle"> Marketplaces & Platform UX, shipping scalable flows for B2B and B2C.
             </h1>
 
@@ -55,72 +63,14 @@
 
 
 
-      <div class="Grid Grid--gutters Grid--cols-8">
-
-        <div class="Grid-cell centerVH">
-          <div class="ClipboardBoxIconOnly">
-            <button class="ClipboardIconOnly">
-              <img title="Copy Email to Clipboard" class="iconS hoverGrey100 paddingM fitContentax borderRadiusMax" src="../icon/mail.svg" alt="LinkedIn">
-              <p class="clickIconCopy">vickyw.design@gmail.com</p>
-            </button>
-          </div>
-
-        </div>
-        <div class="Grid-cell centerVH">
-          <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank" title="LinkedIn">
-            <img class="iconS hoverGrey100 paddingM fitContentax borderRadiusMax borderRadiusS" src="../icon/in.svg" alt="LinkedIn">
-          </a>
-        </div>
-
-        <div class="Grid-cell centerVH">
-          <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-            <img class="iconS hoverGrey100 paddingM fitContentax borderRadiusMax" src="../icon/git.svg" alt="GitHub">
-          </a>
-        </div>
-        <div class="Grid-cell centerVH">
-          <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
-            <img class="iconS hoverGrey100 paddingM fitContentax borderRadiusMax" src="../icon/Codepen.svg" alt="CodePen">
-          </a>
-        </div>
-        <div class="Grid-cell centerVH displayLaptop">
-          <div class="dropdownSM">
-            <img title="Share" class="iconS hoverGrey100 paddingM fitContent borderRadiusMax dropbtn" src="../icon/share.svg" alt="Share">
-            <div class="dropdownSM-content">
-              <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
-                on LinkedIn</a>
-              <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&amp;media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&amp;description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell displayTablet">
-        </div>
-        <div class="Grid-cell displayLaptop">
-        </div>
-        <div class="Grid-cell displayLaptop">
-        </div>
-        <div class="Grid-cell displayTablet">
-        </div>
-        <div class="Grid-cell displayLaptop">
-        </div>
-        <div class="Grid-cell displayLaptop">
-        </div>
-      </div>
 
       <div class="Grid Grid--full Grid--gutter">
         <div class="element">
-          <a href="/resume2025"> <button class="buttonMedium buttonFlip WhiteBg">View/Download Resume </button></a>
+          <a href="/resume2025"> <button class="buttonMedium buttonFlip WhiteBg">View Resume </button></a>
         </div>
       </div>
 
     </div>
-    <div class="spacingSmall"></div>
-
-  </section>
-    <div class="spacingMedium"></div>
-
-
-  <section id="works" data-nav="works">
-
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
@@ -133,7 +83,7 @@
         </div>
       </div>
     </div>
-    <div class="spacingMedium"></div>
+    <div class="spacingSmall"></div>
 
     <div class="wrapper workshelf">
       <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
@@ -156,7 +106,7 @@
               projectDescription:'✔ foundation reused for SuperAdmin expansion'}) %>
             <div class="spacingSmall"></div>
 
-            <a href="/resume2025"> <button class="buttonSmall buttonPrimary">View Case Study</button></a>
+            <a href="/resume2025"> <button class="buttonMedium buttonPrimary">View Case Study</button></a>
 
 
           </div>
